      debian/patches/00git_no_GDK_WINDOW_TYPE.patch,
      debian/patches/00git_no_gdk_x11_drawable_get_xid.patch:
      - Dropped, fixed upstream.
    + debian/libgnome-desktop-3-0.symbols:
      - Updated.
    + debian/control.in:
      - Depend / Build-Depend on gsettings-desktop-schemas(-dev) >= 0.1.4
        for org.gnome.desktop.thumbnailers.
    + debian/rules,
      debian/gnome-desktop3-data.install:
      - gnome-version.xml is back. Install it and build with
        --with-gnome-distributor=Debian again.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 12 Jan 2011 22:12:39 +0000

gnome-desktop3 (2.91.3-3) experimental; urgency=low

  [ Sebastien Bacher ]
  * debian/control.in: updated the dpkg-dev build-depends
  * debian/rules:
    - use dpkg-vendor to set the distributor

  [ Sjoerd Simons ]
  * Merge patches to build against new GTK+ from the ubuntu packaging
    (originally from git)
  * Update debian build-depend to >= 2.91.6

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 18 Dec 2010 18:34:09 +0000

gnome-desktop3 (2.91.3-2) experimental; urgency=low

  * debian/control.in:
    - Let libgnome-desktop-3-dev depend on
      gsettings-desktop-schemas-dev.
  * debian/rules:
    - Fail the build if the .symbols file is not updated.
  * debian/libgnome-desktop-3-0.symbols:
    - Updated.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 05 Dec 2010 22:23:51 +0100

gnome-desktop3 (2.91.3-1) experimental; urgency=low

  [ Sebastien Bacher ]
  * New upstream version
  * Rename the source for the GNOME3 version since they are abi incompatible
  * debian/control.in:
    - build-depends on gsettings-desktop-schemas-dev
    - clean some old conflicts and replaces
    - depends on gsettings-desktop-schemas
    - don't build the gnome-about binary from this version
    - updated description
    - updated for the source and binaries renaming
    - updated the build-depends and depends
  * Updated the .install for the new version