@@ -14,6 +14,7 @@ gnome-desktop3 (2.91.6-1) experimental; urgency=low
     + debian/control.in:
       - Depend / Build-Depend on gsettings-desktop-schemas(-dev) >= 0.1.4
         for org.gnome.desktop.thumbnailers.
+      - Bump libgtk3.0-dev build dependency.
     + debian/rules,
       debian/gnome-desktop3-data.install:
       - gnome-version.xml is back. Install it and build with
